# GxE-Study

./: EDA.py  Progress.md  README.md  Variables_new.txt  commits.csv  config.py  directory_tree.txt  directory_tree_generator.py  main.py  pyproject.toml  requirements.txt
ASB_analysis/: ASB_Analysis_Summary.md  ASB_analysis.py  interaction_terms_evaluation_ASB.csv
Feature_analysis/: feature_analysis_Summary.md
Phase 3/: AST_KNN_SMOTE_allIT.py  AST_KNN_SMOTE_noIT.py  AST_KNN_SMOTE_oneIT.py  config_compare.py
Phase 4/Without_Interaction_Terms/: AST_rf.py  Analysis_1.py  Analysis_2.py  Analysis_3.py  average_model_metrics.csv
Phase_1/: Details.txt  Details_AST.txt  To Do.txt  __init__.py  config.py  config.yaml  directory_tree.txt  update_directory_tree.py  variables.txt
Phase_1/documentation/: AntisocialTrajectory_Analysis.md
Phase_1/project_scripts/: __init__.py
Phase_2/: model_1.py  preprocessed_data_AST.csv  preprocessed_data_SUT.csv  preprocessing.py  preprocessing_newData.py  preprocessing_oldData.py  results.xlsx  update_directory_tree.py
Phase_2/eda/: comparative_test.py  eda_2.py  eda_race_wise.py  eda_updated_scipt_050224.py  initial_eda.py
Phase_2/model_scripts/: Model_2 (trial).py  model (trial).py  model_2 (RigReg).py  model_3 (RanFor).py  model_4 (OLS).py  model_utils.py
SUB_Analysis/: SUB_Analysis.py  SUB_Analysis_Summary.md
data/: AddH ML Variable Tracking.xlsx
pre-Phase_1/: AST_KNN_SMOTE_allIT.py  AST_KNN_SMOTE_noIT.py  AST_KNN_SMOTE_oneIT.py
utility/: data_loader.py  model_utils.py  path_utils.py
(+495 files in other folders)
