[tool.poetry]
name = "gxe-analysis"
version = "0.1.0"
description = ""
authors = ["Shorzinator <shorz2905@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas="^2.2.0"
numpy="^1.26.3"
statsmodels="^0.14.1"
seaborn="^0.12.2"
matplotlib="^3.7.2"
scikit-learn="^1.4.0"
optuna="^3.3.0"
networkx="^3.2.1"
tqdm="^4.66.1"
shap="^0.42.1"
scipy="^1.11.2"
Pillow="^10.0.0"
joblib="^1.3.2"
imblearn="^0.0"
pgmpy="^0.1.23"
xgboost="^2.0.3"
catboost="^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
